--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <header>
         <div class="container-fluid">
             <div class="row py-2 d-flex justify-content-between">
-                <div class="col-10 d-flex align-items-center">
+                <div class="col-5 d-flex align-items-center">
                     <h1 class="mx-2 fw-bold">CAMPOMINATO</h1>
                 </div>
+                <h2 class="col-5 align-items-center py-2">Score: <span id="score"></span>                   
+                </h2>
                 <div class="col-2 d-flex align-items-center">
                     <select name="difficoltà" id="difficulty" class="mx-2">
                         <option value="100">Facile</option>
@@ -35,7 +37,7 @@
             </div>
         </div>
     </header>
-    <main class="bg-primary">
+    <main class="bg-success">
         <div class="container py-5 d-flex justify-content-center">
             <div class="grid" id="grid">
                 
